meja/tests/opaque-wrong-num-args.stderr
File "tests/opaque-wrong-num-args.meja", line 1, characters 17-31:
Error: The type constructor opaque expects 1 argument(s)
       but is here applied to 2 argument(s).
