meja/tests/opaque-wrong-num-args.meja
type t('a, 'b) = opaque('a, 'b);
